--- a/index.html
+++ b/index.html
@@ -54,14 +54,22 @@
       margin-top: 20px;
     }
 
-    .photo img {
-      width: 320px;
+    .photo-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .photo-grid img {
+      width: 200px;
       border-radius: 20px;
-      box-shadow: 0 0 30px #ff69b4, 0 0 60px #ff1493;
+      box-shadow: 0 0 20px #ff69b4, 0 0 40px #ff1493;
       transition: transform 0.5s;
     }
 
-    .photo img:hover {
+    .photo-grid img:hover {
       transform: scale(1.05);
     }
 
@@ -129,8 +137,14 @@
     <h1>Chúc mừng sinh nhật em yêu 🎉</h1>
     <p id="message"></p>
     <button onclick="playMusic()">🎵 Phát nhạc</button>
-    <div class="photo">
-      <img src="./anhcuoi.jpg" alt="Ảnh cưới của hai đứa mình 💑">
+    <div class="photo-grid">
+      <img src="anh1.jpg" alt="Ảnh 1">
+      <img src="anh2.jpg" alt="Ảnh 2">
+      <img src="anh3.jpg" alt="Ảnh 3">
+      <img src="anh4.jpg" alt="Ảnh 4">
+      <img src="anh5.jpg" alt="Ảnh 5">
+      <img src="anh6.jpg" alt="Ảnh 6">
+      <img src="anh7.jpg" alt="Ảnh 7">
     </div>
     <audio id="bgmusic" loop>
       <source src="https://archive.org/download/NoiNayCoAnhSonTungMTPZingMP3/Noi%20Nay%20Co%20Anh.mp3" type="audio/mpeg">
@@ -140,10 +154,14 @@
 
   <script>
     function goToConfirm() {
-      const name = document.getElementById('name').value;
+      const name = document.getElementById('name').value.trim();
       const dob = document.getElementById('dob').value;
       if (!name || !dob) {
         alert("Nhập đầy đủ họ tên và ngày sinh nha em!");
+        return;
+      }
+      if (name.toLowerCase() !== "nguyễn thùy dương") {
+        alert("Tên không đúng rồi em ơi 😢");
         return;
       }
       document.getElementById('step1').classList.remove('active');
@@ -217,19 +235,4 @@
     }
 
     function hexToRgb(hex) {
-      const bigint = parseInt(hex.slice(1), 16);
-      const r = (bigint >> 16) & 255;
-      const g = (bigint >> 8) & 255;
-      const b = bigint & 255;
-      return `${r},${g},${b}`;
-    }
-
-    setInterval(createFirework, 1000);
-    function animate() {
-      drawFireworks();
-      requestAnimationFrame(animate);
-    }
-    animate();
-  </script>
-</body>
-</html>
+      const bigint = parseInt(hex.slice(1
