--- a/index.html
+++ b/index.html
@@ -235,4 +235,20 @@
     }
 
     function hexToRgb(hex) {
-      const bigint = parseInt(hex.slice(1
+      function hexToRgb(hex) {
+      const bigint = parseInt(hex.slice(1), 16);
+      const r = (bigint >> 16) & 255;
+      const g = (bigint >> 8) & 255;
+      const b = bigint & 255;
+      return `${r},${g},${b}`;
+    }
+
+    setInterval(createFirework, 1000);
+
+    function animate() {
+      drawFireworks();
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+
