--- a/index.html
+++ b/index.html
@@ -153,102 +153,102 @@
   </div>
 
   <script>
-    function goToConfirm() {
-      const name = document.getElementById('name').value.trim();
-      const dob = document.getElementById('dob').value;
-      if (!name || !dob) {
-        alert("Nhập đầy đủ họ tên và ngày sinh nha em!");
-        return;
-      }
-      if (name.toLowerCase() !== "nguyễn thùy dương") {
-        alert("Tên không đúng rồi em ơi 😢");
-        return;
-      }
-      document.getElementById('step1').classList.remove('active');
-      document.getElementById('step2').classList.add('active');
+  function goToConfirm() {
+    const name = document.getElementById('name').value.trim();
+    const dob = document.getElementById('dob').value;
+    if (!name || !dob) {
+      alert("Nhập đầy đủ họ tên và ngày sinh nha em!");
+      return;
     }
-
-    function showBirthday() {
-      const name = document.getElementById('name').value;
-      document.getElementById('step2').classList.remove('active');
-      document.getElementById('step3').classList.add('active');
-      document.getElementById('message').innerText = `${name} ơi, 18 tuổi rồi đó nha! Mong em luôn xinh đẹp, rực rỡ và yêu anh nhiều hơn nữa 😘`;
+    if (name.toLowerCase() !== "nguyễn thùy dương") {
+      alert("Tên không đúng rồi em ơi 😢");
+      return;
     }
+    document.getElementById('step1').classList.remove('active');
+    document.getElementById('step2').classList.add('active');
+  }
 
-    function playMusic() {
-      document.getElementById('bgmusic').play();
-    }
+  function showBirthday() {
+    const name = document.getElementById('name').value;
+    document.getElementById('step2').classList.remove('active');
+    document.getElementById('step3').classList.add('active');
+    document.getElementById('message').innerText = `${name} ơi, 18 tuổi rồi đó nha! Mong em luôn xinh đẹp, rực rỡ và yêu anh nhiều hơn nữa 😘`;
+  }
 
-    function createHeart() {
-      const heart = document.createElement('div');
-      heart.className = 'heart';
-      const size = Math.random() * 20 + 10;
-      heart.style.width = `${size}px`;
-      heart.style.height = `${size}px`;
-      const colors = ['#ff0000', '#ff69b4', '#ff1493', '#ff6600', '#ff00cc'];
-      heart.style.background = colors[Math.floor(Math.random() * colors.length)];
-      heart.style.left = Math.random() * window.innerWidth + 'px';
-      heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
-    }
+  function playMusic() {
+    document.getElementById('bgmusic').play();
+  }
 
-    setInterval(createHeart, 100);
+  function createHeart() {
+    const heart = document.createElement('div');
+    heart.className = 'heart';
+    const size = Math.random() * 20 + 10;
+    heart.style.width = `${size}px`;
+    heart.style.height = `${size}px`;
+    const colors = ['#ff0000', '#ff69b4', '#ff1493', '#ff6600', '#ff00cc'];
+    heart.style.background = colors[Math.floor(Math.random() * colors.length)];
+    heart.style.left = Math.random() * window.innerWidth + 'px';
+    heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 6000);
+  }
 
-    // Fireworks
-    const canvas = document.getElementById('fireworks');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+  setInterval(createHeart, 100);
 
-    let particles = [];
+  // Fireworks
+  const canvas = document.getElementById('fireworks');
+  const ctx = canvas.getContext('2d');
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 
-    function createFirework() {
-      const x = Math.random() * canvas.width;
-      const y = Math.random() * canvas.height / 2;
-      const colors = ['#ff00cc', '#ffff00', '#00ffff', '#ff6600', '#00ff00'];
-      for (let i = 0; i < 100; i++) {
-        particles.push({
-          x: x,
-          y: y,
-          radius: Math.random() * 2 + 1,
-          color: colors[Math.floor(Math.random() * colors.length)],
-          angle: Math.random() * 2 * Math.PI,
-          speed: Math.random() * 5 + 2,
-          alpha: 1
-        });
-      }
-    }
+  let particles = [];
 
-    function drawFireworks() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      particles.forEach((p, index) => {
-        p.x += Math.cos(p.angle) * p.speed;
-        p.y += Math.sin(p.angle) * p.speed;
-        p.alpha -= 0.01;
-        if (p.alpha <= 0) particles.splice(index, 1);
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
-        ctx.fillStyle = `rgba(${hexToRgb(p.color)},${p.alpha})`;
-        ctx.fill();
+  function createFirework() {
+    const x = Math.random() * canvas.width;
+    const y = Math.random() * canvas.height / 2;
+    const colors = ['#ff00cc', '#ffff00', '#00ffff', '#ff6600', '#00ff00'];
+    for (let i = 0; i < 100; i++) {
+      particles.push({
+        x: x,
+        y: y,
+        radius: Math.random() * 2 + 1,
+        color: colors[Math.floor(Math.random() * colors.length)],
+        angle: Math.random() * 2 * Math.PI,
+        speed: Math.random() * 5 + 2,
+        alpha: 1
       });
     }
+  }
 
-    function hexToRgb(hex) {
-      function hexToRgb(hex) {
-      const bigint = parseInt(hex.slice(1), 16);
-      const r = (bigint >> 16) & 255;
-      const g = (bigint >> 8) & 255;
-      const b = bigint & 255;
-      return `${r},${g},${b}`;
-    }
+  function drawFireworks() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    particles.forEach((p, index) => {
+      p.x += Math.cos(p.angle) * p.speed;
+      p.y += Math.sin(p.angle) * p.speed;
+      p.alpha -= 0.01;
+      if (p.alpha <= 0) particles.splice(index, 1);
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+      ctx.fillStyle = `rgba(${hexToRgb(p.color)},${p.alpha})`;
+      ctx.fill();
+    });
+  }
 
-    setInterval(createFirework, 1000);
+  function hexToRgb(hex) {
+    const bigint = parseInt(hex.slice(1), 16);
+    const r = (bigint >> 16) & 255;
+    const g = (bigint >> 8) & 255;
+    const b = bigint & 255;
+    return `${r},${g},${b}`;
+  }
 
-    function animate() {
-      drawFireworks();
-      requestAnimationFrame(animate);
-    }
+  setInterval(createFirework, 1000);
 
-    animate();
+  function animate() {
+    drawFireworks();
+    requestAnimationFrame(animate);
+  }
+
+  animate();
+</script>
 
