--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle, #ffdde1, #ee9ca7);
+      background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
       color: white;
@@ -78,46 +78,61 @@
       to { text-shadow: 0 0 20px #fff, 0 0 40px #ff00cc; }
     }
 
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
+    .candle {
+      position: relative;
+      width: 20px;
+      height: 60px;
+      background: #ff6347;
+      margin: 30px auto;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
-    .heart {
+    .flame {
       position: absolute;
-      transform: rotate(45deg);
-      animation: float 6s linear infinite;
-      z-index: 0;
-    }
-
-    .heart::before,
-    .heart::after {
-      content: "";
-      position: absolute;
+      top: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 15px;
+      height: 25px;
+      background: radial-gradient(circle, #ff0, #ffa500);
       border-radius: 50%;
+      animation: flicker 0.3s infinite;
     }
 
-    .heart::before {
-      top: -50%;
-      left: 0;
+    @keyframes flicker {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
     }
 
-    .heart::after {
-      left: -50%;
-      top: 0;
+    .smoke {
+      position: absolute;
+      top: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 5px;
+      height: 30px;
+      background: linear-gradient(to top, rgba(255,255,255,0.5), transparent);
+      border-radius: 50%;
+      opacity: 0;
+      transition: opacity 0.5s;
     }
 
-    @keyframes float {
-      0% { transform: translateY(100vh) rotate(45deg); opacity: 1; }
-      100% { transform: translateY(-10vh) rotate(45deg); opacity: 0; }
+    .smoke.show {
+      opacity: 1;
+      animation: rise 2s ease-out forwards;
+    }
+
+    @keyframes rise {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-50px); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Bước 1: Nhập thông tin -->
+  <!-- Bước 1 -->
   <div class="form-container active" id="step1">
     <h1>Nhập thông tin của em 💌</h1>
     <input type="text" id="name" placeholder="Họ và tên">
@@ -126,16 +141,23 @@
     <button onclick="goToConfirm()">Tiếp tục</button>
   </div>
 
-  <!-- Bước 2: Xác nhận -->
+  <!-- Bước 2 -->
   <div class="confirm-container" id="step2">
     <h1>Em có đồng ý xem tiếp không? 😘</h1>
     <button onclick="showBirthday()">Đồng ý 💖</button>
   </div>
 
-  <!-- Bước 3: Trang sinh nhật -->
+  <!-- Bước 3 -->
   <div class="birthday-container" id="step3">
     <h1>Chúc mừng sinh nhật em yêu 🎉</h1>
     <p id="message"></p>
+
+    <!-- Cây nến -->
+    <div class="candle" onclick="blowCandle()">
+      <div class="flame" id="flame"></div>
+      <div class="smoke" id="smoke"></div>
+    </div>
+
     <button onclick="playMusic()">🎵 Phát nhạc</button>
     <div class="photo-grid">
       <img src="anh1.jpg" alt="Ảnh 1">
@@ -146,109 +168,54 @@
       <img src="anh6.jpg" alt="Ảnh 6">
       <img src="anh7.jpg" alt="Ảnh 7">
     </div>
+
     <audio id="bgmusic" loop>
       <source src="https://archive.org/download/NoiNayCoAnhSonTungMTPZingMP3/Noi%20Nay%20Co%20Anh.mp3" type="audio/mpeg">
     </audio>
-    <canvas id="fireworks"></canvas>
   </div>
 
   <script>
-  function goToConfirm() {
-    const name = document.getElementById('name').value.trim();
-    const dob = document.getElementById('dob').value;
-    if (!name || !dob) {
-      alert("Nhập đầy đủ họ tên và ngày sinh nha em!");
-      return;
+    function normalize(str) {
+      return str.toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "").trim();
     }
-    if (name.toLowerCase() !== "nguyễn thùy dương") {
-      alert("Tên không đúng rồi em ơi 😢");
-      return;
+
+    function goToConfirm() {
+      const name = document.getElementById('name').value.trim();
+      const dob = document.getElementById('dob').value;
+      if (!name || !dob) {
+        alert("Nhập đầy đủ họ tên và ngày sinh nha em!");
+        return;
+      }
+      if (normalize(name) !== "nguyen thuy duong") {
+        alert("Tên không đúng rồi em ơi 😢");
+        return;
+      }
+      document.getElementById('step1').classList.remove('active');
+      document.getElementById('step2').classList.add('active');
     }
-    document.getElementById('step1').classList.remove('active');
-    document.getElementById('step2').classList.add('active');
-  }
 
-  function showBirthday() {
-    const name = document.getElementById('name').value;
-    document.getElementById('step2').classList.remove('active');
-    document.getElementById('step3').classList.add('active');
-    document.getElementById('message').innerText = `${name} ơi, 18 tuổi rồi đó nha! Mong em luôn xinh đẹp, rực rỡ và yêu anh nhiều hơn nữa 😘`;
-  }
+    function showBirthday() {
+      const name = document.getElementById('name').value;
+      document.getElementById('step2').classList.remove('active');
+      document.getElementById('step3').classList.add('active');
+      document.getElementById('message').innerText = `${name} ơi, chúc em sinh nhật thật vui vẻ, luôn xinh đẹp và yêu anh nhiều hơn nữa 😘`;
+    }
 
-  function playMusic() {
-    document.getElementById('bgmusic').play();
-  }
-
-  function createHeart() {
-    const heart = document.createElement('div');
-    heart.className = 'heart';
-    const size = Math.random() * 20 + 10;
-    heart.style.width = `${size}px`;
-    heart.style.height = `${size}px`;
-    const colors = ['#ff0000', '#ff69b4', '#ff1493', '#ff6600', '#ff00cc'];
-    heart.style.background = colors[Math.floor(Math.random() * colors.length)];
-    heart.style.left = Math.random() * window.innerWidth + 'px';
-    heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 6000);
-  }
-
-  setInterval(createHeart, 100);
-
-  // Fireworks
-  const canvas = document.getElementById('fireworks');
-  const ctx = canvas.getContext('2d');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-
-  let particles = [];
-
-  function createFirework() {
-    const x = Math.random() * canvas.width;
-    const y = Math.random() * canvas.height / 2;
-    const colors = ['#ff00cc', '#ffff00', '#00ffff', '#ff6600', '#00ff00'];
-    for (let i = 0; i < 100; i++) {
-      particles.push({
-        x: x,
-        y: y,
-        radius: Math.random() * 2 + 1,
-        color: colors[Math.floor(Math.random() * colors.length)],
-        angle: Math.random() * 2 * Math.PI,
-        speed: Math.random() * 5 + 2,
-        alpha: 1
+    function playMusic() {
+      const music = document.getElementById('bgmusic');
+      music.play().catch(() => {
+        alert("Em phải bấm nút để phát nhạc nha 😘");
       });
     }
-  }
 
-  function drawFireworks() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    particles.forEach((p, index) => {
-      p.x += Math.cos(p.angle) * p.speed;
-      p.y += Math.sin(p.angle) * p.speed;
-      p.alpha -= 0.01;
-      if (p.alpha <= 0) particles.splice(index, 1);
-      ctx.beginPath();
-      ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
-      ctx.fillStyle = `rgba(${hexToRgb(p.color)},${p.alpha})`;
-      ctx.fill();
-    });
-  }
-
-  function hexToRgb(hex) {
-    const bigint = parseInt(hex.slice(1), 16);
-    const r = (bigint >> 16) & 255;
-    const g = (bigint >> 8) & 255;
-    const b = bigint & 255;
-    return `${r},${g},${b}`;
-  }
-
-  setInterval(createFirework, 1000);
-
-  function animate() {
-    drawFireworks();
-    requestAnimationFrame(animate);
-  }
-
-  animate();
-</script>
-
+    function blowCandle() {
+      const flame = document.getElementById('flame');
+      const smoke = document.getElementById('smoke');
+      if (flame.style.display !== 'none') {
+        flame.style.display = 'none';
+        smoke.classList.add('show');
+      }
+    }
+  </script>
+</body>
+</html>
