--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <audio id="bgmusic" loop>
-      <source src="https://archive.org/download/NoiNayCoAnhSonTungMTPZingMP3/Noi%20Nay%20Co%20Anh.mp3" type="audio/mpeg">
+      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
     </audio>
   </div>
 
